adding element targets and  initial js classes

--- a/styles.css
+++ b/styles.css
@@ -169,8 +169,8 @@ body {
   text-align: center;
 }
 
-/* ---------------End of Products ---------------- */
-/* --------------- Cart ---------------- */
+/* ---End of Products --------- */
+/* ---- Cart -------- */
 .cart-overlay {
   position: fixed;
   top: 0;
