--- a/styles.css
+++ b/styles.css
@@ -267,3 +267,9 @@ body {
 }
 
 /* --------------- End of Cart ---------------- */
+
+.footer {
+    text-align: center;
+    border-top: 1px solid;
+    padding: 10px;
+}
